Modified Duplicate array program

--- a/Winter-22/2C_AverageMarks.html
+++ b/Winter-22/2C_AverageMarks.html
@@ -9,7 +9,7 @@
       document.write("Students in ascending order of marks:");
 
       for (var i = 0; i < students.length; i++) {
-        document.write(`<br>${students[i][0]}: ${students[i][1]} marks`);
+        document.write("<br>" + students[i][0] + ":" + students[i][1]);
       }
 
       var totalMarks = 0;
