--- a/Winter-19/5A_DynamicList.html
+++ b/Winter-19/5A_DynamicList.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <script type="text/javascript">
+    <script>
       function modifyList(x) {
         with (document.forms.myform) {
           if (x == 1) {
@@ -25,8 +25,8 @@
         <option value="1">Pine-Apple</option>
         <option value="1">Apple</option>
       </select> <br>
-      <input type="radio" name="grp1" value="1" checked="true" onclick="modifyList(this.value)"/>Fruits
-      <input type="radio" name="grp1" value="2" onclick="modifyList(this.value)"/> Vegetables
+      <input type="radio" value="1" checked="true" onclick="modifyList(this.value)"/>Fruits
+      <input type="radio" value="2" onclick="modifyList(this.value)"/> Vegetables
     </form>
   </body>
 </html>
