Modified Dynamic List Program

--- a/Winter-19/5A_DynamicList.html
+++ b/Winter-19/5A_DynamicList.html
@@ -25,8 +25,8 @@
         <option value="1">Pine-Apple</option>
         <option value="1">Apple</option>
       </select> <br>
-      <input type="radio" value="1" checked="true" onclick="modifyList(this.value)"/>Fruits
-      <input type="radio" value="2" onclick="modifyList(this.value)"/> Vegetables
+      <input type="radio" name="grp1" value="1" checked="true" onclick="modifyList(this.value)"/>Fruits
+      <input type="radio" name="grp1" value="2" onclick="modifyList(this.value)"/> Vegetables
     </form>
   </body>
 </html>
